<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unos_novog_pacijenta"
        android:theme="@style/TitleTextTheme"
        android:layout_margin="30dp"
        android:gravity="center" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_input"
        android:layout_gravity="center"
        android:tint="@color/colorGreen"
        />

    <EditText
        android:id="@+id/tv_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unesite_ime"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <EditText
        android:id="@+id/tv_input_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unesite_prezime"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <EditText
        android:id="@+id/tv_input_symptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unesite_simptome_i_opste_stanje_pacijenta"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    
    <Button
        android:id="@+id/button_add_in_waiting_room"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/dodajte_u_cekaonicu"
        android:background="@color/darkGray"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        />

</LinearLayout>