<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/karton_pacijenta"
                android:layout_margin="20dp"
                android:theme="@style/TitleTextTheme"
                />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_patient_file"
                android:tint="@color/colorGreen"
                />

            <EditText
                android:id="@+id/tv_patient_file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/tv_patient_file_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stanje_pri_prijemu"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                />

            <EditText
                android:id="@+id/tv_patient_file_arrive_symptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trenutno_stanje"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                />

            <EditText
                android:id="@+id/tv_patient_file_current_symptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datum_prijema"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"/>

            <TextView
                android:id="@+id/tv_patient_file_arrive_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp">

                <Button
                    android:id="@+id/button_patient_file_give_up"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/odustani"
                    android:backgroundTint="@color/darkGray"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Button
                    android:id="@+id/button_patient_file_change"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:text="@string/izmeni"
                    android:backgroundTint="@color/darkGray"
                    android:textColor="@android:color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>